新建项目 subpackage_project_test

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "subpackage_test",
-  "displayName": "subpackage_test"
+  "name": "subpackage_project_test",
+  "displayName": "subpackage_project_test"
 }
