--- a/ios/subpackage_project_test.xcodeproj/xcshareddata/xcschemes/subpackage_project_test.xcscheme
+++ b/ios/subpackage_project_test.xcodeproj/xcshareddata/xcschemes/subpackage_project_test.xcscheme
@@ -99,6 +99,13 @@
             ReferencedContainer = "container:subpackage_project_test.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
